--- a/style.css
+++ b/style.css
@@ -49,9 +49,15 @@ body::before{
   .form-style-3 {
     font-size: 15px;
   }
-
+  
+  label {
+    display: inline-block;
+    width: 60%;
+  }
   
   input, select {
       width:30%;
+      text-align: right;
+
   }
 }
